# DOOM-3-BFG

./: .gitignore  CMakeLists.txt  README.md
doomclassic/: CMakeLists.txt
doomclassic/doom/: DoomLeaderboards.h  Main.h  PlayerProfile.h  Precompiled.h  am_map.cpp  d_items.cpp  d_items.h  d_main.cpp  d_main.h  d_net.cpp  d_net.h  d_player.h  d_think.h  d_ticcmd.h  doomdef.cpp  doominterface.h  doomlib.cpp  doomlib.h  doomstat.cpp  doomstat.h  dstrings.cpp  g_game.cpp  i_net.cpp  i_net.h  i_sound.cpp  i_system.cpp  i_system.h  i_video.h  info.cpp  info.h  m_bbox.cpp  m_fixed.cpp  m_fixed.h  m_misc.cpp  m_misc.h  m_swap.cpp  m_swap.h  mus2midi.cpp  p_floor.cpp  p_inter.cpp  (+30 more)
doomclassic/timidity/: CMakeLists.txt  config.h
neo/: CMakeLists.txt  doom3.sln  doomexe.vcxproj  doomexe.vcxproj.filters  external.vcxproj  external.vcxproj.filters  idlib.vcxproj  idlib.vcxproj.filters
neo/aas/: CMakeLists.txt
neo/cm/: CMakeLists.txt  CollisionModel_load.cpp  CollisionModel_local.h
neo/d3xp/: AF.cpp  AFEntity.cpp  Achievements.cpp  Actor.cpp  AimAssist.cpp  BrittleFracture.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  Fx.cpp  GameEdit.cpp  Game_local.cpp  Game_network.cpp  Grabber.cpp  IK.cpp  Item.cpp  Leaderboards.cpp  Light.cpp  Misc.cpp  Moveable.cpp  Mover.cpp  MultiplayerGame.cpp  Player.cpp  PlayerIcon.cpp  PlayerView.cpp  Projectile.cpp  Pvs.cpp  SecurityCamera.cpp  SmokeParticles.cpp  Sound.cpp  Target.cpp  Trigger.cpp  Weapon.cpp  WorldSpawn.cpp
neo/d3xp/ai/: AAS_routing.cpp  AI.cpp  AI_events.cpp
neo/d3xp/anim/: Anim.cpp  Anim_Blend.cpp
neo/d3xp/gamesys/: Class.cpp  Class.h  Event.cpp  Event.h  SysCmds.cpp
neo/d3xp/menus/: MenuHandler.cpp  MenuHandler_HUD.cpp  MenuHandler_PDA.cpp  MenuHandler_Scoreboard.cpp  MenuHandler_Shell.cpp  MenuScreen.cpp  MenuScreen_HUD.cpp  MenuScreen_PDA_Inventory.cpp  MenuScreen_PDA_UserData.cpp  MenuScreen_PDA_UserEmails.cpp  MenuScreen_PDA_VideoDisks.cpp  MenuScreen_Scoreboard.cpp  MenuScreen_Shell_Bindings.cpp  MenuScreen_Shell_Browser.cpp  MenuScreen_Shell_ControllerLayout.cpp  MenuScreen_Shell_Controls.cpp  MenuScreen_Shell_Credits.cpp  MenuScreen_Shell_Dev.cpp  MenuScreen_Shell_Difficulty.cpp  MenuScreen_Shell_GameLobby.cpp  MenuScreen_Shell_GameOptions.cpp  MenuScreen_Shell_Gamepad.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Load.cpp  MenuScreen_Shell_MatchSettings.cpp  MenuScreen_Shell_ModeSelect.cpp  MenuScreen_Shell_NewGame.cpp  MenuScreen_Shell_PartyLobby.cpp  MenuScreen_Shell_Pause.cpp  MenuScreen_Shell_Playstation.cpp  MenuScreen_Shell_PressStart.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Save.cpp  MenuScreen_Shell_Settings.cpp  MenuScreen_Shell_Singleplayer.cpp  MenuScreen_Shell_Stereoscopics.cpp  MenuScreen_Shell_SystemOptions.cpp  MenuWidget.cpp  MenuWidget_Button.cpp  (+18 more)
neo/d3xp/script/: Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp  Script_Program.h
neo/framework/: CMakeLists.txt  CVarSystem.h  Common.cpp  Common_local.h  Common_printf.cpp  Compressor.cpp  Compressor.h  DeclManager.cpp  File.cpp  File.h  FileSystem.cpp  File_SaveGame.cpp  File_SaveGame.h  KeyInput.cpp  Unzip.h  Zip.cpp  Zip.h  common_frame.cpp  miniz.h
neo/framework/decls/: DeclAF.cpp  DeclEntityDef.cpp  DeclFX.cpp  DeclManager.cpp  DeclPDA.cpp  DeclParticle.cpp  DeclSkin.cpp  DeclTable.cpp
neo/idlib/: Base64.cpp  CMakeLists.txt  Dict.cpp  Heap.cpp  Heap.h  Lib.cpp  Lib.h  ParallelJobList.cpp  ParallelJobList_JobHeaders.h  Parser.cpp  SoftwareCache.cpp  Str.cpp  Thread.cpp  Thread.h  precompiled.h
neo/idlib/containers/: StaticList.h
neo/idlib/geometry/: DrawVert.h  DrawVert_intrinsics.h  RenderMatrix.cpp  Surface_Patch.h  Winding.h
neo/idlib/hashing/: CRC32.cpp  MD4.cpp
neo/idlib/math/: Lcp.cpp  MatX.cpp  MatX.h  Math.cpp  Math.h  Random.h  Simd.cpp  Simd.h  Simd_Generic.cpp  Simd_Generic.h  Simd_SSE.cpp  Simd_SSE.h  VecX.cpp  VecX.h
neo/idlib/sys/: sys_assert.cpp  sys_assert.h  sys_atomic.cpp  sys_defines.h  sys_includes.h  sys_intrinsics.h  sys_threading.h  sys_types.h
neo/idlib/text/: Base64.cpp  CmdArgs.cpp  Lexer.cpp  Parser.cpp  Parser.h  Str.cpp  Str.h  StrStatic.h  Token.cpp  Token.h
neo/renderer/: BufferObject.cpp  BufferObject.h  CMakeLists.txt  GLMatrix.cpp  GraphicsAPIWrapper.h  GuiModel.cpp  Image_files.cpp  Image_load.cpp  Model.cpp  ModelDecal.cpp  ModelDecal.h  ModelOverlay.cpp  Model_liquid.cpp  Model_lwo.cpp  Model_md5.cpp  RenderLog.cpp  RenderProgs.cpp  RenderProgs.h  RenderProgs_GLSL.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld_portals.cpp  VertexCache.cpp  VertexCache.h  tr_backend_draw.cpp  tr_backend_rendertools.cpp  tr_frontend_addmodels.cpp  tr_frontend_main.cpp  tr_local.h  tr_trace.cpp  tr_trisurf.cpp
neo/renderer/DXT/: DXTCodec.h  DXTCodec_local.h  DXTDecoder.cpp  DXTEncoder.cpp  DXTEncoder_SSE2.cpp
neo/renderer/OpenGL/: gl_GraphicsAPIWrapper.cpp  gl_Image.cpp  qgl.h
neo/renderer/jobs/: ShadowShared.cpp
neo/sound/: CMakeLists.txt  snd_local.h  snd_system.cpp  snd_world.cpp  sound.h
neo/sound/FAudio/: FA_SoundHardware.cpp  FA_SoundHardware.h  FA_SoundSample.cpp  FA_SoundSample.h  FA_SoundVoice.cpp  FA_SoundVoice.h
neo/sound/OpenAL/: AL_SoundHardware.cpp  AL_SoundHardware.h  AL_SoundSample.cpp  AL_SoundSample.h  AL_SoundVoice.cpp  AL_SoundVoice.h
neo/swf/: CMakeLists.txt  SWF.h  SWF_Bitstream.cpp  SWF_Image.cpp  SWF_Zlib.cpp
neo/sys/: CMakeLists.txt  Snapshot_Jobs.cpp  sys_cpu.cpp  sys_lobby.cpp  sys_lobby.h  sys_local.cpp  sys_local.h  sys_net.cpp  sys_profile.cpp  sys_profile.h  sys_public.h  sys_savegame.cpp  sys_session.h  sys_session_local.cpp  sys_session_local.h  sys_session_savegames.cpp
neo/sys/posix/: posix_main.cpp  posix_syscon.cpp
neo/sys/sdl/: sdl_achievements.cpp  sdl_achievements.h  sdl_cpu.cpp  sdl_gamma.cpp  sdl_glimp.cpp  sdl_input.cpp  sdl_input.h  sdl_local.h  sdl_localuser.cpp  sdl_localuser.h  sdl_main.cpp  sdl_qgl.cpp  sdl_savegame.cpp  sdl_session_local.cpp  sdl_shared.cpp  (+6 more)
neo/ui/: CMakeLists.txt  EditWindow.cpp  SimpleWindow.cpp  SimpleWindow.h  Window.cpp  Window.h
(+32 files in other folders)
